# ybserver

./: .dockerignore  .gitignore  6-28.md  CMakeLists.txt  Dockerfile  README.md  build.sh  config.yaml  cpp-coroutine-network-learning-path.md  docker-compose.yml  learn-summary.md  main.cpp  test  test_bench.sh  test_heaptrack.sh  test_hotplug.sh  test_ws.py
.github/workflows/: README.md  ci.yml  docker-multiarch.yml  release.yml  rpc-tests.yml  security.yml
cache/: file_cache.cpp  file_cache.hpp
config/: config.cpp  config.hpp
db/: connection_pool.cpp  connection_pool.hpp  database.cpp  database.hpp
docs/: api-interface.md
docs/superpowers/plans/: 2026-07-07-ai-microservice-rpc-plan.md
docs/superpowers/specs/: 2026-06-27-industry-gap-analysis.md  2026-06-28-http2-design.md  2026-06-28-metrics-dashboard-design.md  2026-06-30-api-interface-design.md  2026-07-02-websocket-design.md  2026-07-07-ai-microservice-rpc-design.md  2026-07-07-cd-docker-deployment.md
examples/: docker-compose.dev.yml  docker-compose.yml
examples/cpp_handlers/: CMakeLists.txt  auth_util.hpp  chat_handler.cpp  chat_handler.hpp  registerhandler.cpp  registerhandler.hpp  shopping_handler.cpp
examples/db/: init.sql
examples/phase1/: benchmark.cpp
examples/proto/: chat.proto  ppt.proto  rag.proto  shopping.proto
examples/python_services/ai-agent-compare-values/: .env  Dockerfile  config.yaml  grpc_server.py  requirements.txt  run.py  web_server.py
examples/python_services/ai-agent-compare-values/core/: __init__.py  guide_agent.py  llm_client.py  product_agent.py  share_utils.py  status.py
examples/python_services/ai-agent-compare-values/core/guide_agent/: __init__.py  guide_agent.py  guide_statemachine.py
examples/python_services/ai-agent-compare-values/core/llm_client/: OllamaClient.py  llm_client.py
examples/python_services/ai-agent-compare-values/core/product_agent/: __init__.py  product_agent.py  product_data.py  product_statemachine.py
examples/python_services/ai-agent-compare-values/core/util/: embedding.py  load.py
examples/python_services/ai-agent-compare-values/graphrag/: transition_notebook.py  transiton_phone.py
examples/python_services/ai-agent-compare-values/graphrag/dataset/: db_notebool.py  db_phone.py  notebooks_zol.json  notebooks_zol_output.csv  phones_zol.json  phones_zol_output.csv
examples/python_services/ai-agent-compare-values/graphrag/tool/: Graphrag.py  __init__.py  dbdriver.py
examples/python_services/ai-agent-compare-values/mcp_servers/: client.py  mcp_setup.py  server.py
examples/python_services/ai-agent-compare-values/mcp_servers/depend/: auth.py
examples/python_services/ai-agent-compare-values/prompts/: guide_ask.txt  guide_ask_intent.txt  guide_detail.txt  guide_init.txt  guide_l1.txt  guide_observe.txt  guide_observe_intent.txt  guide_system.txt  product_chat.txt  product_planning.txt  product_react.txt  product_select.txt  product_system.txt
examples/python_services/ai-agent-compare-values/script/: README.md  __init__.py  agent.py  default_tools.py  example_usage.py  executor.py  memory.py  planner.py  test.py  test_guide_agent.py  test_loop.py  test_qwen_no_think.py  teststatemachine.py  tools.py
examples/python_services/ai-agent-compare-values/tools/: json_parse.py
examples/python_services/ai-chat/: Dockerfile  requirements.txt  server.py
examples/python_services/ai-ppt/: Dockerfile  requirements.txt  server.py
examples/python_services/ai-rag/: Dockerfile  requirements.txt  server.py
handler/: health.cpp  health.hpp  loader.cpp  loader.hpp  metrics.cpp  metrics.hpp  proxy_handler.cpp  proxy_handler.hpp  reloader.cpp  reloader.hpp  request_handler.cpp  request_handler.hpp  reverse_proxy.cpp  reverse_proxy.hpp  router.cpp  router.hpp  upstream_conn_pool.cpp  upstream_conn_pool.hpp  upstream_pool.cpp  upstream_pool.hpp  ws_echo.hpp
handlers/: CMakeLists.txt  example_handler.cpp
http/: context.hpp  fixed_buffer.hpp  h1_parser.cpp  h1_parser.hpp  httpparser.cpp  httpparser.hpp  llhttp_parser.cpp  llhttp_parser.hpp  protocol.cpp  protocol.hpp  response.cpp  response.hpp
http/h2/: frame.cpp  frame.hpp  types.hpp
http/http1.1/: parser.cpp  parser.hpp  session.cpp  session.hpp  session_pool.cpp  session_pool.hpp
http/http2/: session.cpp  session.hpp  stream_context.cpp  stream_context.hpp  ws_connection.hpp  ws_test.cpp
http/http2/parser/: BFL.hpp  HPACK.cpp  HPACK.hpp  flow_control.cpp  flow_control.hpp  stream_manager.cpp  stream_manager.hpp
log/: fast_logger.hpp  logger.hpp
middleware/: middleware.cpp  middleware.hpp
net/: mem_pool.cpp  mem_pool.hpp  metrics.cpp  metrics.hpp  multi_server.cpp  multi_server.hpp  object_pool.hpp  response.cpp  response.hpp  server.cpp  server.hpp  server_base.hpp  session.cpp  session.hpp  session_base.hpp  session_pool.cpp  session_pool.hpp  session_region.cpp  session_region.hpp  sse_push.cpp  sse_push.hpp  tls_context.cpp  tls_context.hpp  ws_connection.hpp  ws_frame.cpp  ws_frame.hpp  ws_relay.hpp
phase1/: 01_echo_server.cpp  test_coro.cpp  test_suspend.cpp
phase2/: config.cpp  config.hpp  config.yaml  file_cache.cpp  file_cache.hpp  main.cpp  session.cpp
phase2/httpcontext/: context.hpp  httpcontext.cpp  httpcontext.hpp  llhttp_context.cpp  llhttp_context.hpp
phase3/: connection_pool.cpp  connection_pool.hpp  database.cpp  database.hpp  database_test.cpp
rpc/: CMakeLists.txt  connection_pool.cpp  connection_pool.hpp  database.cpp  database.hpp  database_test.cpp  db_interface.hpp  grpc_bridge.cpp  grpc_bridge.hpp  grpc_channel_pool.cpp  grpc_channel_pool.hpp  load_balancer.cpp  load_balancer.hpp  retry_policy.cpp  retry_policy.hpp  rpc_module.cpp  rpc_module.hpp  service_discovery.cpp  service_discovery.hpp  types.hpp
scripts/: test.cpp  test_hotplug.sh  test_valgrind.sh  test_ws2.py
ssl/: tls_context.cpp  tls_context.hpp
tests/: CMakeLists.txt  database_test.cpp  rpc_test.cpp
tools/: hud.sh
www/: index.html
www/chat/: index.html
www/dashboard/: app.js  index.html  style.css
www/shopping/: index.html
(+4 files in other folders)
